# linkedin-ghostwriter

./: .gitignore  env.example  llm_based_evals.py  main.py  pyproject.toml  readme.md  requirements.txt  rule_based_evals.py
examples/: basic_usage.py
scripts/: run_ghostwriter.py
src/linkedin_ghostwriter/: __init__.py
src/linkedin_ghostwriter/core/: __init__.py  config.py  ghostwriter.py
src/linkedin_ghostwriter/evaluations/: __init__.py  base.py  llm_based.py  rule_based.py
src/linkedin_ghostwriter/prompts/: __init__.py  templates.py
src/linkedin_ghostwriter/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py  test_generic_synthetic.py  test_ghostwriter.py
tests/synthetic_posts/: cliche_fail.json  jargon_fail.json  style_fail.json
